Fix spacing and z-index

--- a/app/scripts/modules/core/src/application/nav/verticalNav.less
+++ b/app/scripts/modules/core/src/application/nav/verticalNav.less
@@ -58,7 +58,7 @@
         margin-right: 8px;
         border-radius: 3px;
         color: var(--color-white);
-        background-color: var(--color-primary);
+        background-color: var(--color-black);
         padding: 2px;
         line-height: 14px;
         text-align: center;
@@ -80,7 +80,7 @@
 
     .active {
       .nav-category {
-        background: var(--color-accessory-light);
+        background: #bbdee8;
         color: var(--color-primary);
       }
 
