--- a/app/scripts/modules/core/src/projects/project.less
+++ b/app/scripts/modules/core/src/projects/project.less
@@ -7,7 +7,7 @@
   flex: 0 0 auto;
 
   .container {
-    margin-left: 48px;
+    margin-left: 47px;
   }
 
   h2 {
