--- a/app/scripts/modules/core/src/widgets/notifier/notifier.component.less
+++ b/app/scripts/modules/core/src/widgets/notifier/notifier.component.less
@@ -4,7 +4,7 @@
   position: fixed;
   bottom: 5px;
   width: 100%;
-  z-index: 3;
+  z-index: var(--layer-critical);
 }
 .user-notification {
   .fade-in(0.1);
